sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:14: error: 'while' expected but '}' found.
  }while (cond)
  ^AlgGnomeSort:14: error: ';' expected but 'while' found.
  }while (cond)
   ^AlgGnomeSort:18: error: Unmatched closing brace '}' ignored here
}
^